hphp/hack/test/typecheck/let/let_type_error.php.exp
File "let_type_error.php", line 7, characters 17-17:
Invalid argument (Typing[4110])
File "let_type_error.php", line 3, characters 24-29:
This is a string
File "let_type_error.php", line 6, characters 11-13:
It is incompatible with an int
