hphp/hack/test/typecheck/let/let_type_error.php
<?hh // experimental

function expect_string(string $x): void {}

function foo(): void {
  let x : int = 42;
  expect_string(x); // type error
}
